------------------------------------------------------------------------------------------ 
----                                  OpenMS 1.9                                      ---- 
------------------------------------------------------------------------------------------ 
	 
TOPP tools: 
 
UTIL tools: 
	 
OpenMS library improvements: 
	 
TOPPView improvements: 
	 
TOPPAS improvements: 
	 
Changes to the Build System: 
 
Fixed Issues: 
	 
Detailed list of changes to specific OpenMS classes:
- MODIFIED:
  - AASequence: removed AASequence(ConstIterator, ConstIterator) constructor, since it ignored Terminal Modifications; since there was no way to enable correct construction from two Iterators, we removed it
  


------------------------------------------------------------------------------------------
----                                  OpenMS 1.8                                      ----
------------------------------------------------------------------------------------------

TOPP tools:
- MODIFIED:
  - MapAligner: separated data extraction from transformation modelling - this allows to combine different algorithms and models; new option "invert"; reworked parameters (please see the MapAligner documentation and update your INI files)
  - FeatureLinker: now able to link consensus maps; added new experimental algorithm "unabeled_qt"; improved quality calculation in "unlabeled" algorithm
  - IDMapper, FeatureLinker ("unlabeled"/"unlabeled_qt" algorithms): now consider charge states by default (use parameter "ignore_charge" if you want to avoid this)
  - FileInfo: improved formatting of output
  - TextExporter: unified output formats
  - FileConverter: added conversion to consensusXML
  - ProteinQuantifier: redefined meaning of parameter combination "top 0"/"consensus:fix_peptides"
  - ITRAQAnalyzer: isotope corrected quantitation result is written to "-out" instead of the uncorrected values